Web/Portfolio/app/client-side/src/scss/shared.scss
$defaultBorderRadius: 5px;

body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    background-color: #f2f2f2;

    .portrait {
        max-width: 100%;
    }

    .main-content {
        position: relative;
        top: -100px;
        width: 60%;
        margin: 0 auto;
        padding: 50px 100px;
        background-color: white;
        border-radius: $defaultBorderRadius;
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
        overflow: hidden;

        .avatar {
            width: 30%;
            float: left;
            margin: 0 2% 2% 0;
        }

        table {
            tr {
                height: 60px;
                text-align: center;

                th {
                    font-weight: bold;
                    background-color: lightgrey;
                }

                td {
                    background-color: #e3e3e3;
                }
            }
        }

        .photo-wrapper {
            display: flex;
            flex-flow: row wrap;
            align-content: flex-start;
            justify-content: left;

            img {
                width: 30%;
                max-height: 300px;
                flex: 2 2 auto;
                margin: 10px;
            }
        }
    }

    footer {
        background-color: #e6e6e6;

        section {
            width: 60%;
            margin: 0 auto;
            padding: 50px 100px;
        }
    }
}

.full-width {
    width: 100%;
}

p {
    text-align: justify;
}

header * {
    font-weight: 100;
}

h1 {
    font-size: 40px;
}

h2 {
    font-size: 32px;
}

button {
    font-size: 20px;
    border: none;
    margin: 0 10px;
    width: 100px;
    height: 40px;
    border-radius: $defaultBorderRadius;
    background-color: lightgrey;

    &:hover {
        background-color: darken(lightgrey, 20%);
    }
}

